--- a/animais-fantasticos/css/style.css
+++ b/animais-fantasticos/css/style.css
@@ -19,6 +19,14 @@ body {
     grid-template-columns: 1fr 120px minmax(300px, 800px) 1fr; 
 }
 
+html.textomaior {
+    font-size: 150%;
+}
+
+.azul {
+    background-color: teal;
+}
+
 .menu {
     grid-column: 3 / 5;
     margin-top: 2rem;
@@ -34,7 +42,7 @@ body {
 
 .menu li a {
     display: block;
-    padding: 10px;
+    padding: 15px 10px;
     margin-right: 10px;
     color: #222;
     text-decoration: none;
@@ -95,6 +103,10 @@ body {
     grid-column: 2;
 }
 
+.animais-lista li {
+    cursor: pointer;
+}
+
 .animais-lista::-webkit-scrollbar {
     width: 18px;
 }
@@ -128,6 +140,7 @@ body {
     margin-top: 2rem;
     margin-bottom: .5rem;
     color: #e54;
+    cursor: pointer;
 }
 
 .faq-lista dt::before {
@@ -212,4 +225,66 @@ body {
     .copy {
         margin-bottom: 0;
     }
+}
+
+.js .js-tabcontent section {
+    display: none;
+}
+
+.js-tabcontent section.ativo {
+    display: block;
+    animation: show .6s forwards;
+}
+
+@keyframes show {
+    from {
+        opacity: 0;
+        transform: translate3d(-30px, 0, 0);
+    }
+
+    to {
+        opacity: 1;
+        transform: translate3d(0, 0, 0);
+    }
+}
+
+.js .js-accordion dd {
+    display: none;
+}
+
+.js-accordion dt::after {
+    content: '⮟';
+    margin-left: 10px;
+}
+
+.js-accordion dt.ativo::after {
+    content: '⮝';
+}
+
+.js-accordion dd.ativo {
+    display: block;
+    animation: slideDown .5s forwards;
+}
+
+@keyframes slideDown 
+{
+    from {
+        opacity: 0;
+        max-height: 0;
+    }
+    to {
+        opacity: 1;
+        max-height: 1;
+    }
+}
+
+.js .js-scroll {
+    opacity: 0;
+    transform: translate3d(-30px, 0, 0);
+    transition: .3s;
+}
+
+.js .js-scroll.ativo {
+    opacity: 1;
+    transform: translate3d(0, 0, 0);
 }
